<resources>
    <string name="app_name">Top+</string>
    <string name="resume">  Actualizar datos  </string>
    <string name="tomarfoto">Tomar foto</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCYDVCKX3ha2pr9R1uS77PM8iodtDY8ZH4</string>

    <string name="imagenconfoto">Imagen con foto</string>
    <string name="subir">Subir</string>
    <string name="nosubir">No Subir</string>
    <string name="izq"><![CDATA[<<]]></string>
    <string name="der"><![CDATA[>>]]></string>
    <string name="imagen">imagen</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>

    <string name="fotoent">Foto Inv. Entrada</string>
    <string name="fotosal">Foto Inv. Salida</string>
    <string name="Version">Version</string>
    <string name="buscar_tienda">"buscar tienda "</string>
    <string name="buscar_producto">"buscar productos"</string>

    <!-- TODO aqui se coloca el usuario y clave por default -->
    <!-- jguerrero1 (SCL),  prueba1 (ALU),  schavez (ALU),   -->
    <!-- 12345,          56789,             56789,    -->

    <string name="resUsuario"></string>
    <string name="resClave"></string>
    <string name="resEmpresa">1</string>

    <string name="fotocompetencia">Foto competencia</string>
    <string name="fotocaducidad">Foto caducidad</string>
    <string name="textocaducidad">Caducidad</string>

    <string name="start">Inicio</string>
    <string name="end">Fin</string>

    <string name="ok">ok</string>
    <string name="cancel">cancel</string>

    <string name="username">username</string>
    <string name="password">password</string>
    <string name="descarga">Descargar de la nube</string>
    <string name="informacion">Información de datos almacenados</string>
    <string name="regresar">Regresar</string>
    <string name="buscar_incidencia">Buscar incidencia</string>
    <string name="tipo_incidencia">Tipo Incidencia</string>
    <string name="fecha_respuesta">Fecha Respuesta</string>
    <string name="respuestas_de_la_incidencia">Respuestas de la Incidencia</string>
    <string name="tienda">Tienda</string>
    <string name="usuario">Usuario</string>
    <string name="fecha_incidencia">Fecha incidencia</string>
    <string name="observaciones">Observaciones</string>
    <string name="respuesta">Respuesta</string>
    <string name="notificaci_n">Notificación</string>
    <string name="titulo_del_men">Titulo del Menú</string>
    <string name="imagen_de_ubicaci_n_de_tienda">Imagen de ubicación de tienda</string>
    <string name="imagen_para_checkin">Imagen para checkin</string>
    <string name="canjes">Canjes</string>
    <string name="forma_conexi_n">Forma Conexión</string>

</resources>
