<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".listatiendas">

    <LinearLayout
        android:id = "@+id/swap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/portada"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="350dp"
            android:text="@string/Version"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/margen_productos"
            android:autofillHints=""
            android:background="@drawable/img_usuario"
            android:ems="10"
            android:hint="Nombre"
            android:inputType="textPersonName"
            android:paddingStart="65dp"
            android:text="@string/resUsuario"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="180dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/margen_productos"
            android:autofillHints=""
            android:background="@drawable/img_clave"
            android:ems="10"
            android:hint="Clave"
            android:inputType="textPersonName"
            android:paddingStart="65dp"
            android:text="@string/resClave"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/Bloque1a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPwd"
            android:layout_marginTop="@dimen/margen_productos"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinClientes"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="@dimen/margen_productos"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <Button
            android:id="@+id/cmdIngresar"
            android:layout_width="140dp"
            android:layout_height="35dp"
            android:layout_marginTop="@dimen/margen_productos"
            android:layout_marginBottom="12dp"
            android:background="@drawable/img_entrar"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/upload" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="@dimen/fab_margin"
        android:visibility="visible"
        app:srcCompat="@drawable/alerta" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/update" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
