<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_foto1a"
    tools:context=".Incidencia">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".Incidencia">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Titulo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/respuestas_de_la_incidencia"
                        android:textColor="@color/verdeCorporativo"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque10000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblNotif"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/notificaci_n"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos"
                        tools:ignore="SpUsage" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/Bloque00000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblTienda"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/tienda"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTienda"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/usuario"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos"
                        tools:ignore="SpUsage" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque0000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque00000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblfecha"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/fecha_incidencia"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFecha"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque000000000000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblfecharespuesta"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/fecha_respuesta"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloquee00"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtFechaRespuesta"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Titulo7"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20dp"
                        android:text="@string/tipo_incidencia"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtTipoIncidencia"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo" />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/Bloque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal|center_vertical">

                    <ImageView
                        android:id="@+id/imageClipboard"
                        android:layout_width="363dp"
                        android:layout_height="392dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="@dimen/margen_arriba"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="5dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/imagenconfoto"
                        android:gravity="center_horizontal|center_vertical"
                        android:scaleType="centerInside"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@tools:sample/avatars[8]" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    app:layout_constraintTop_toBottomOf="@+id/Bloque"/>


                <LinearLayout
                    android:id="@+id/Bloque1a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Observaciones"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/observaciones"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtObservaciones"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque1a000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/lblRespuesta"
                        android:layout_width="134dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/respuesta"
                        android:textColor="@color/colorFuente"
                        android:textSize="@dimen/tamanioletraproductos" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Bloque2a0000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txtRespuesta"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/caja_bordesredondeados"
                        android:ems="10"
                        android:inputType=""
                        android:paddingStart="20dp"
                        android:enabled="false"
                        android:textColor="@color/verdeCorporativo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margen_respuestaincidencia"
                    android:layout_marginBottom="200dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/cmdCerrar"
                        android:layout_width="140dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/cerrar" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/regresar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>